updated a list apart completed sponsor

--- a/index.html
+++ b/index.html
@@ -7,22 +7,21 @@
   <body>
 
     <main>
-      <h1>
-        A LIST APART
-      </h1>
+      <h1>A LIST APART</h1>
 
       <div>
-        <h3>
-          NEW! JUL 27, 2017
-        </h3>
+        <h3>NEW! JUL 27, 2017</h3>
       </div>
 
       <div>
         <h2>
+          <a href="https://alistapart.com/article/practical-user-research-creating-a-culture">
           Practical User Research: Creating a Culture of Learning in Large Organizations
+          </a>
         </h2>
         <h3>
-          by Same Moore . 1 Comment
+          by <a href="https://alistapart.com/author/sam-moore">Sam Moore</a> .
+          <a href="https://alistapart.com/article/practical-user-research-creating-a-culture#comments">1 Comment</a>
         </h3>
       </div>
 
@@ -39,30 +38,68 @@
 
     <section>
       <div>
-        <h2>
-          More from A List Apart
-        </h2>
+        <h2>More from A List Apart</h2>
+      </div>
+    </section>
+
+    <section>
+      <div>
+        <h3>Team Conflict: Four Ways to Deflate the Discord that's Killing Your Team</h3>
       </div>
       <div>
-        <h3>
-          Team Conflict: Four Ways to Deflate the Discord that's Killing Your Team
-        </h3>
+        <h4>by <a href="https://alistapart.com/author/jessica-hall">Jessica Hall</a></h4>
       </div>
       <div>
-        <h4>
-          by Jens Oliver Melert
-        </h4>
+        <p>Take part in the Great Web Maintainability Survey </p>
       </div>
       <div>
-        <p>
-          Take part in the Great Web Maintainability Survey
-        </p>
+        <p>Process - June 27, 2017</p>
+      </div>
+    </section>
+
+    <section>
+      <div>
+        <h3>Color Accessibility Workflows</h3>
       </div>
       <div>
-        <p>
-          Process - June 27, 2017
-        </p>
+        <h4>by <a href="https://alistapart.com/author/gericoady">Geri Coady</a></h4>
       </div>
+      <div>
+        <p>Seeing color through other people's eyes.</p>
+      </div>
+      <div>
+        <p>User Experience - June 6, 2017</p>
+      </div>
+    </section>
+
+    <section>
+      <div class="">
+        <h3>The Mindfulness of a Manual Performance Audit</h3>
+      </div>
+      <div class="">
+        <h4>by <a href="https://alistapart.com/author/chip-cullen">Chip Cullen</a></h4>
+      </div>
+      <div class="">
+        <p>Lets not automate everything away, urges Chip Cullen in a tribute to the benefits
+        of occasional manual performance aduits.</p>
+      </div>
+      <div class="">
+        <p>Workflow & Tools - May 30, 2017</p>
+      </div>
+
+      <section>
+        <div class="">
+          <h3>OUR SPONSOR</h3>
+        </div>
+        <div class="">
+          <p><a href="https://aneventapart.com/">AN EVENT APART.</a>. 10+ years of design,
+          code, and content for web & interaction designers. $100 off with code AEAALA.</p>
+        </div>
+        <div class="">
+          <h5><a href="https://aneventapart.com/">https://aneventapart.com</a></h5>
+        </div>
+      </section>
+
 
 
 
