updated a list apart completed bottom nav bar and follow us

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
 
     <section>
       <div>
-        <h3>Team Conflict: Four Ways to Deflate the Discord that's Killing Your Team</h3>
+        <h3><a href="https://alistapart.com/article/team-conflict-four-ways-to-deflate-the-discord-thats-killing-your-team">
+        Team Conflict: Four Ways to Deflate the Discord that's Killing Your Team</a></h3>
       </div>
       <div>
         <h4>by <a href="https://alistapart.com/author/jessica-hall">Jessica Hall</a></h4>
@@ -59,7 +60,7 @@
 
     <section>
       <div>
-        <h3>Color Accessibility Workflows</h3>
+        <h3><a href="https://alistapart.com/article/color-accessibility-workflows">Color Accessibility Workflows</a></h3>
       </div>
       <div>
         <h4>by <a href="https://alistapart.com/author/gericoady">Geri Coady</a></h4>
@@ -74,7 +75,8 @@
 
     <section>
       <div class="">
-        <h3>The Mindfulness of a Manual Performance Audit</h3>
+        <h3><a href="https://alistapart.com/article/mindfulness-of-a-manual-performance-audit">
+        The Mindfulness of a Manual Performance Audit</a></h3>
       </div>
       <div class="">
         <h4>by <a href="https://alistapart.com/author/chip-cullen">Chip Cullen</a></h4>
@@ -86,22 +88,188 @@
       <div class="">
         <p>Workflow & Tools - May 30, 2017</p>
       </div>
+    </section>
 
-      <section>
-        <div class="">
-          <h3>OUR SPONSOR</h3>
-        </div>
-        <div class="">
-          <p><a href="https://aneventapart.com/">AN EVENT APART.</a>. 10+ years of design,
-          code, and content for web & interaction designers. $100 off with code AEAALA.</p>
-        </div>
-        <div class="">
-          <h5><a href="https://aneventapart.com/">https://aneventapart.com</a></h5>
-        </div>
-      </section>
+    <section>
+      <div class="">
+        <h3>OUR SPONSOR</h3>
+      </div>
+      <div class="">
+        <p><a href="https://aneventapart.com/">AN EVENT APART.</a>. 10+ years of design,
+        code, and content for web & interaction designers. $100 off with code AEAALA.</p>
+      </div>
+      <div class="">
+        <h5><a href="https://aneventapart.com/">https://aneventapart.com</a></h5>
+      </div>
+    </section>
+
+    <section>
+      <div class="">
+        <h3><a href="https://alistapart.com/article/web-maintainability-survey">
+        Web Maintainability Industry Survey: How Do We Maintain?</a></h3>
+      </div>
+      <div class="">
+        <h4>by <a href="https://alistapart.com/author/jens-oliver-meiert">Jens Oliver Melert</a></h4>
+      </div>
+      <div class="">
+        <p>Take part in the Great Web Maintainability Survey</p>
+      </div>
+      <div class="">
+        <p>Industry & Business - May 16, 2017</p>
+      </div>
+    </section>
+
+    <section>
+      <div class="">
+        <h3><a href="https://alistapart.com/article/fait-accompli-agentive-tech-is-here">
+        Fait Accompli: Agentive Tech Is Here</a></h3>
+      </div>
+      <div class="">
+        <h4>by <a href="https://alistapart.com/author/chris-noessel">Chris Noessel</a></h4>
+      </div>
+      <div class="">
+        <p>Agentive Technology, the pwoer of agents, and working in behalf of the user.</p>
+      </div>
+      <div class="">
+        <p>User Experience - May 9, 2017</p>
+      </div>
+    </section>
+
+    <section>
+      <div class="">
+        <h3><a href="https://alistapart.com/article/user-research-when-you-cant-talk-to-your-users">
+        User Research When You Can't Talk to Your Users</a></h3>
+      </div>
+      <div class="">
+        <h4>by <a href="https://alistapart.com/author/jon-peterson">Jon Peterson</a></h4>
+      </div>
+      <div class="">
+        <p>No money for user reseach? Start thinking unconventionally.</p>
+      </div>
+      <div class="">
+        <p>User Experience - May 2, 2017</p>
+      </div>
+    </section>
+
+    <section>
+      <div class="">
+        <h3><a href="https://alistapart.com/article/focus-on-what-you-do-best-and-outsource-the-rest">
+        Focus on What You Do Best and Outsource the Rest</a></h3>
+      </div>
+      <div class="">
+        <h4>by <a href="https://alistapart.com/author/suzanne-scacca">Suzanne Scacca</a></h4>
+      </div>
+      <div class="">
+        <p>Play to your strength, and outsource everything that slwos you down or makes you less productive.</p>
+      </div>
+      <div class="">
+        <p>User Experience - Apr 18, 2017</p>
+      </div>
+    </section>
 
 
+    <section>
+      <div class="">
+        <h3><a href="https://alistapart.com/article/widen-out-using-your-blog-to-attract-new-clients">
+        Widen Out: Using Your Blog to Attract New Clents</a></h3>
+      </div>
+      <div class="">
+        <h4>by <a href="https://alistapart.com/author/dmitry-dragilev">Dmitry Dragilev</a></h4>
+      </div>
+      <div class="">
+        <p>Transform you weblog into a lead generating machine.</p>
+      </div>
+      <div class="">
+        <p>Writing - April 4, 2017</p>
+      </div>
+    </section>
 
+    <section>
+      <div class="">
+        <h3><a href="https://alistapart.com/article/practical-grid">
+        Practical CSS Grid: Adding Grid to an Existing Design</a></h3>
+      </div>
+      <div class="">
+        <h4>by <a href="https://alistapart.com/author/emeyer">Eric Meyer</a></h4>
+      </div>
+      <div class="">
+        <p>Converting existing designs to Grid without breaking in non-grid browers</p>
+      </div>
+      <div class="">
+        <p>CSS - March 23, 2017</p>
+      </div>
+    </section>
+
+    <section>
+      <div class="">
+        <h3><a href="https://alistapart.com/article/practical-design-discovery">Practical Design Discovery</a></h3>
+      </div>
+      <div class="">
+        <h4>by <a href="https://alistapart.com/author/dan-brown">Dan Brown</a></h4>
+      </div>
+      <div class="">
+        <p>Ensure design choices trace back to specific objectives</p>
+      </div>
+      <div class="">
+        <p>Workflow & Tools - March 9, 2017</p>
+      </div>
+    </section>
+
+    <section>
+      <div class="">
+        <h3><a href="https://alistapart.com/article/long-term-design-rewriting-the-design-sales-pitch">Long-Term Design:
+        Rewriting the Design Sales Pitch</a></h3>
+      </div>
+      <div class="">
+        <h4>by <a href="https://alistapart.com/author/jarrod-drysdale">Jarrod Drysdale</a></h4>
+      </div>
+      <div class="">
+        <p>Stop hawking design like it was a household gadget that needs upgrading and start building</p>
+      </div>
+      <div class="">
+        <p>Design - March 2, 2017</p>
+      </div>
+    </section>
+
+    <section>
+      <div class="">
+        <h3><a href="https://alistapart.com/article/big-data-visualization-with-meaning">
+        Big Data Visualization with Meaning</a></h3>
+      </div>
+      <div class="">
+        <h4>by <a href="https://alistapart.com/author/byron-houwens">Byron Houwens</a></h4>
+      </div>
+      <div class="">
+        <p>Web-based data visualization take UX to a new level.</p>
+      </div>
+      <div class="">
+        <p>State of the Web - Feburary 23, 2017</p>
+      </div>
+    </section>
+
+    <section>
+      <nav>
+        <ul>
+          <li><a href="https://alistapart.com/about">About</a></li>
+          <li><a href="https://alistapart.com/authors">Authors</a></li>
+          <li><a href="https://alistapart.com/about/masthead">Masthead</a></li>
+          <li><a href="https://alistapart.com/about/style-guide">Style Guide</a></li>
+          <li><a href="https://alistapart.com/contact">Contact</a></li>
+          <li><a href="https://alistapart.com/about/sponsor">Sponsorships</a></li>
+        </ul>
+      </nav>
+    </section>
+
+    <section>
+      <p>Follow us:</p>
+      <nav>
+        <li><a href="https://alistapart.com/about/rss">RSS</a></li>
+        <li><a href="https://alistapart.com/email-signup/">Email</a></li>
+        <li><a href="https://www.facebook.com/alistapart">Facebook</a></li>
+        <li><a href="https://plus.google.com/+alistapart">Google+</a></li>
+        <li><a href="https://twitter.com/alistapart">Twitter</a></li>
+      </nav>
+    </section>
 
 
   </body>
