updated a list apart completed footer done

--- a/index.html
+++ b/index.html
@@ -6,36 +6,38 @@
   </head>
   <body>
 
-    <main>
-      <h1>A LIST APART</h1>
+  <header>
 
-      <div>
-        <h3>NEW! JUL 27, 2017</h3>
-      </div>
+    <h1>A LIST APART</h1>
 
-      <div>
-        <h2>
-          <a href="https://alistapart.com/article/practical-user-research-creating-a-culture">
-          Practical User Research: Creating a Culture of Learning in Large Organizations
-          </a>
-        </h2>
-        <h3>
-          by <a href="https://alistapart.com/author/sam-moore">Sam Moore</a> .
-          <a href="https://alistapart.com/article/practical-user-research-creating-a-culture#comments">1 Comment</a>
-        </h3>
-      </div>
+    <div>
+      <h3>NEW! JUL 27, 2017</h3>
+    </div>
 
-      <div>
-        <p>
-          User research doesn’t have to be a big dollar, corporate initiative.
-          Sam Moore shows how, by paying attention to the people, tools, and
-          work practices within an organization, your team can demonstrate the
-          value of user research on the ground—which will open doors to
-          additional resources in the future.
-        </p>
-      </div>
-    </main>
+    <div>
+      <h2>
+        <a href="https://alistapart.com/article/practical-user-research-creating-a-culture">
+        Practical User Research: Creating a Culture of Learning in Large Organizations
+        </a>
+      </h2>
+      <h3>
+        by <a href="https://alistapart.com/author/sam-moore">Sam Moore</a> .
+        <a href="https://alistapart.com/article/practical-user-research-creating-a-culture#comments">1 Comment</a>
+      </h3>
+    </div>
 
+    <div>
+      <p>
+        User research doesn’t have to be a big dollar, corporate initiative.
+        Sam Moore shows how, by paying attention to the people, tools, and
+        work practices within an organization, your team can demonstrate the
+        value of user research on the ground—which will open doors to
+        additional resources in the future.
+      </p>
+    </div>
+  </header>
+
+  <main>
     <section>
       <div>
         <h2>More from A List Apart</h2>
@@ -271,6 +273,37 @@
       </nav>
     </section>
 
+    <section>
+      <img src="https://alistapart.com/components/assets/img/promo_aba.png" alt="some books">
+      <h4>A BOOK APART</h4>
+      <p>Mobile First & Responsive Web Design bundle.</p>
+      <p>Buy both and save!</p>
+      <p><a href="https://abookapart.com/">Order now</a></p>
+    </section>
+
+    <section>
+      <img src="https://alistapart.com/components/assets/img/promo_aea.png" alt="ice mountain">
+      <h4>AN EVENT APART</h4>
+      <p>Three days of design, code, and contect for people who make websites.</p>
+      <p><a href="https://aneventapart.com/">See the 2016 schedule</a></p>
+    </section>
+  </main>
+
+  <footer>
+    <p>ISSN 1534-0295 - Copyright (c) 1998 - 2017 A List Apart & Our Authors</p>
+    <nav>
+      <li><a href="https://alistapart.com/about/copyright">Permissions & Copyright</a></li>
+      <li><a href="https://www.webtype.com/">Fonts by Webtype</a></li>
+      <li><a href="https://alistapart.com/tools/log-in">Log In</a></li>
+      <li><a href="https://alistapart.com/tools/register">Register</a></li>
+    </nav>
+    <div class="">
+      <a href="https://aneventapart.com/"></a>
+      <a href="https://abookapart.com/"></a>
+      <a href="https://www.arcustech.com/"></a>
+    </div>
+    <h1>*FOR PEOPLE WHO MAKE WEBSITES</h1>
+  </footer>
 
   </body>
 </html>
